--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,7 +31,10 @@
 /*----------------------------------------------------*/
 @import "home_1/about";
 /*---------------------------------------------------- */
-
+/*Client Section*/
+/*----------------------------------------------------*/
+@import "home_1/client";
+/*---------------------------------------------------- */
 
 /*Footer Section*/
 /*----------------------------------------------------*/
