--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -242,13 +242,20 @@ select:visited {
 		color: #C9F7CA;
 		font-weight: 500;
 		font-size: 	16px;
-		padding: 16px 20px;
+		padding: 15px 25px;
 		letter-spacing: 1px;
 		display: inline-block;
 		font-family: Test_Söhne_500;
 		background-color: var(--vt-title-color);
 		@media #{$xxs} {
 			padding: 14px 18px;
+		}
+	}
+	&.ver_2 {
+		a {
+			color: var(--vt-title-color);
+			background-color: transparent;
+			border: 2px solid var(--vt-title-color);
 		}
 	}
 }
