--- a/assets/scss/home_1/_service.scss
+++ b/assets/scss/home_1/_service.scss
@@ -190,19 +190,138 @@
 	@media #{$lg,$md,$sm,$xs} {
 		display: none;
 	}
-	 .swiper-pagination-bullet {
-	 	width: 8px;
-	 	opacity: 1;
-	 	height: 8px;
-	 	margin: 6px auto;
-	 	background-color: #D1D1D1;
-	 	transition: all 500ms ease;
-	 	border: 2px solid transparent;
-	 	&.swiper-pagination-bullet-active {
-	 		width: 12px;
-	 		height: 12px;
-	 		border: 2px solid #101010;
-	 		background-color: transparent;
-	 	}
-	 }
+	.swiper-pagination-bullet {
+		width: 8px;
+		opacity: 1;
+		height: 8px;
+		margin: 6px auto;
+		background-color: #D1D1D1;
+		transition: all 500ms ease;
+		border: 2px solid transparent;
+		&.swiper-pagination-bullet-active {
+			width: 12px;
+			height: 12px;
+			border: 2px solid #101010;
+			background-color: transparent;
+		}
+	} 
+}
+.vt-service-section-3 {
+	background-color: var(--vt-gray);
+}
+.vt-service-content {
+	z-index: 1;
+	margin: 0 auto;
+	max-width: 1440px;
+	padding-right: 10px;
+	@media #{$xxl,$xl,$lg} {
+		padding-right: 25px;
+	}
+	.vt-service-bg {
+		top: 0;
+		right: 0;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		max-width: 720px;
+		max-height: 920px;
+		@media #{$xl} {
+			max-width: 645px;
+		}
+		@media #{$lg} {
+			max-width: 400px;
+		}
+		@media #{$md,$sm,$xs} {
+			display: none;
+		}
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+}
+.vt-service-text-wrap-3 {
+	max-width: 545px;
+	@media #{$md,$sm,$xs} {
+		max-width: 100%;
+	}
+	.vt-section-title {
+		.section_title {
+			font-size: 64px;
+			@media #{$md,$sm,$xs} {
+				font-size: 45px;
+			}
+			@media #{$xxs} {
+				font-size: 30px;
+			}
+		}
+	}
+}
+.vt-service-slider-area-2 {
+	padding-top: 48px;
+}
+.vt-service-slider-wrap {
+	margin: 0;
+	max-width: 904px;
+	@media #{$md,$sm,$xs} {
+		max-width: 100%;
+		padding: 0px 15px;
+	}
+}
+.vt-ser-slider-nav {
+	@media #{$md,$sm,$xs} {
+		gap: 0px 10px;
+		margin-top: 40px;
+	}
+	.vt-ser-prev,
+	.vt-ser-next {
+		top: 50%;
+		width: 40px;
+		z-index: 2;
+		height: 40px;
+		position: absolute;
+		transition: all 500ms ease;
+		transform: translateY(-50%);
+		background-color: rgba(255, 255, 255, .48);
+		&:hover {
+			background-color: #C9F7CA;
+		}
+		@media #{$md,$sm,$xs} {
+			position: static;
+			transform: translateY(0);
+		}
+	}
+	.vt-ser-prev {
+		left: -20px;
+	}
+	.vt-ser-next {
+		right: -20px;
+	}
+
+}
+.vt-service-item-3 {
+	margin: 0 auto;
+	max-width: 280px;
+	background-color: #fff;
+	padding: 60px 32px 40px;
+	@media #{$md,$sm,$xs} {
+		max-width: 100%;
+	}
+	.item-icon {
+		margin-bottom: 38px;
+	}
+	.item-text {
+		.ser_title {
+			font-size: 23px;
+			font-weight: 500;
+			line-height: 1.3;
+			padding-bottom: 16px;
+			color: var(--vt-title-color);
+		}
+		p {
+			color: #5D5D5D;
+			font-size: 18px;
+		}
+	}
 }
