--- a/assets/scss/home_1/_service.scss
+++ b/assets/scss/home_1/_service.scss
@@ -29,7 +29,10 @@
 		background: linear-gradient(180deg, #CFE2FF 0%, #A4A7FE 100%);
 	}
 }
-
+.vt-service-section-2 {
+	margin: 0 auto;
+	max-width: 1920px;
+}
 .vt-service-item-2 {
 	z-index: 1;
 	height: 890px;
