--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,6 +35,13 @@
 /*----------------------------------------------------*/
 @import "home_1/client";
 /*---------------------------------------------------- */
+/*Testimonial Section*/
+/*----------------------------------------------------*/
+@import "home_1/testimonial";
+/*---------------------------------------------------- */
+
+
+
 
 /*Footer Section*/
 /*----------------------------------------------------*/
