--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,7 +39,10 @@
 /*----------------------------------------------------*/
 @import "home_1/testimonial";
 /*---------------------------------------------------- */
-
+/*Why Choose Us Section*/
+/*----------------------------------------------------*/
+@import "home_1/why-choose";
+/*---------------------------------------------------- */
 
 
 
