--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,7 +43,10 @@
 /*----------------------------------------------------*/
 @import "home_1/why-choose";
 /*---------------------------------------------------- */
-
+/*Blog Section*/
+/*----------------------------------------------------*/
+@import "home_1/blog";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
