--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -47,6 +47,15 @@
 /*----------------------------------------------------*/
 @import "home_1/blog";
 /*---------------------------------------------------- */
+/*Faq Section*/
+/*----------------------------------------------------*/
+@import "home_1/faq";
+/*---------------------------------------------------- */
+/*Contact Section*/
+/*----------------------------------------------------*/
+@import "home_1/contact";
+/*---------------------------------------------------- */
+
 
 
 /*Footer Section*/
