--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -55,7 +55,10 @@
 /*----------------------------------------------------*/
 @import "home_1/contact";
 /*---------------------------------------------------- */
-
+/*Get In Touch Section*/
+/*----------------------------------------------------*/
+@import "home_1/get-in-touch";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
