--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3366,6 +3366,51 @@ select:visited {
 }
 
 /*---------------------------------------------------- */
+/*Get In Touch Section*/
+/*----------------------------------------------------*/
+.vt-get-in-touch-section {
+  z-index: 1;
+  padding-top: 120px;
+  padding-bottom: 405px;
+  background-color: #fff;
+}
+.vt-get-in-touch-section .vt-section-title {
+  margin: 0 auto;
+  max-width: 510px;
+}
+
+.vt-get-in-touch-content {
+  gap: 30px 80px;
+  padding-top: 45px;
+}
+
+.vt-get-in-touch-item h3 {
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 5px;
+  color: var(--vt-title-color);
+}
+.vt-get-in-touch-item p {
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.3;
+  max-width: 145px;
+}
+
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
+.vt-footer-widget-area {
+  margin: 0 auto;
+  max-width: 946px;
+  gap: 30px 120px;
+}
+
+.vt-footer-widget .widget-title {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  color: var(--vt-title-color);
+}
+
 /*---------------------------------------------------- */
