--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3401,16 +3401,130 @@ select:visited {
 /*Footer Section*/
 /*----------------------------------------------------*/
 .vt-footer-widget-area {
-  margin: 0 auto;
-  max-width: 946px;
-  gap: 30px 120px;
+  gap: 30px 80px;
 }
 
 .vt-footer-widget .widget-title {
   font-size: 14px;
   font-weight: 500;
+  padding-bottom: 18px;
   letter-spacing: 3px;
   color: var(--vt-title-color);
+}
+.vt-footer-widget .logo-widget {
+  margin-right: 60px;
+}
+.vt-footer-widget .logo-widget a {
+  width: 100%;
+  display: block;
+}
+.vt-footer-widget .menu-widget ul li {
+  color: #4F4F4F;
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+.vt-footer-widget .menu-widget ul li a {
+  position: relative;
+  display: inline-block;
+}
+.vt-footer-widget .menu-widget ul li a:before {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  width: 0%;
+  content: "";
+  margin: 0 auto;
+  position: absolute;
+  background-color: #3533FF;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-footer-widget .menu-widget ul li a:hover:before {
+  width: 100%;
+}
+.vt-footer-widget .cta-widget .cta-info .info-icon {
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  margin-right: 15px;
+  background-color: #E7E7E7;
+}
+.vt-footer-widget .cta-widget .cta-info .info-icon i {
+  font-size: 14px;
+}
+.vt-footer-widget .cta-widget .cta-info .info-text {
+  max-width: 138px;
+}
+.vt-footer-widget .cta-widget .cta-info .info-text span, .vt-footer-widget .cta-widget .cta-info .info-text a {
+  display: block;
+  font-size: 14px;
+}
+.vt-footer-widget .cta-widget .cta-info .info-text a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 500;
+  font-family: var(--vt-heading);
+}
+.vt-footer-widget .cta-widget .cta-info .info-text a span {
+  margin-right: 5px;
+  font-family: var(--vt-body-font);
+}
+.vt-footer-widget .cta-widget .cta-text {
+  font-size: 14px;
+  margin-top: 35px;
+}
+.vt-footer-widget .cta-widget .cta-text span {
+  font-family: var(--vt-heading);
+}
+.vt-footer-widget .cta-widget .cta-text i {
+  margin-left: 5px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.vt-footer-widget .social-widget a {
+  font-size: 14px;
+  margin-right: 20px;
+  color: var(--vt-title-color);
+}
+
+.vt-footer-copyright {
+  padding-bottom: 45px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.vt-footer-copyright .vt-copyright-text {
+  font-size: 16px;
+}
+.vt-footer-copyright .vt-copyright-text a {
+  font-family: var(--vt-heading);
+}
+.vt-footer-copyright .vt-copyright-menu li {
+  margin-left: 40px;
+  color: var(--vt-title-color);
+}
+.vt-footer-copyright .vt-copyright-menu li a {
+  font-size: 16px;
+  position: relative;
+  padding-bottom: 2px;
+}
+.vt-footer-copyright .vt-copyright-menu li a:before {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  width: 0%;
+  content: "";
+  margin: 0 auto;
+  position: absolute;
+  background-color: #3533FF;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-footer-copyright .vt-copyright-menu li a:hover:before {
+  width: 100%;
 }
 
 /*---------------------------------------------------- */
